# leetcode

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
solutions/: 0001_two_sum.py  0003-longest-substring-without-repeating-characters.py  0019-remove-nth-node-from-end-of-list.py  0020-valid-parentheses.py  0024-swap-nodes-in-pairs.py  0049_group_anagrams.py  0071-simplify-path.py  0082-remove-duplicates-from-sorted-list-ii.py  0083-remove-duplicates-from-sorted-list.py  0092-reverse-linked-list-ii.py  0121-best-time-to-buy-and-sell-stock.py  0125_valid_palindrome.py  0141-linked-list-cycle.py  0167_two_sum_ii_input_array_is_sorted.py  0203-remove-linked-list-elements.py  0205-isomorphic-strings.py  0206-reverse-linked-list.py  0209-minimum-size-subarray-sum.py  0217_contains_duplicate.py  0225-implement-stack-using-queues.py  0232-implement-queue-using-stacks.py  0234-palindrome-linked-list.py  0239-sliding-window-maximum.py  0242_valid_anagram.py  0268-missing-number.py  0283-move-zeroes.py  0290-word-pattern.py  0303-range-sum-query-immutable.py  0344-reverse-string.py  0346-moving-average-from-data-stream.py  0347-top-k-frequent-elements.py  0383-ransom-note.py  0383_ransom_note.py  0392-is-subsequence.py  0412-fizz-buzz.py  0451-sort-characters-by-frequency.py  0496-next-greater-element-i.py  0525-contiguous-array.py  0557-reverse-words-in-a-string-iii.py  0560-subarray-sum-equals-k.py  (+72 more)
