[project]
name = "leetcode"
version = "0.1.0"
description = "A collection of LeetCode solutions."
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = ["pre-commit>=4.0.0"]
lint = ["ruff>=0.8.0"]
test = ["pytest>=8.3.0", "pytest-cov>=6.0.0"]

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "--cov=solutions",
    "--cov-report=term:skip-covered",
]

[tool.ruff.lint]
select = ["I"]
